2001-03-05  Christian Stimming  <stimming@tuhh.de>

	* src/scm/html-utilities.scm: reorganizing of the hierarchical
	reports: subtotals are now printed *below* the subaccounts instead
	of above.

2001-03-04  Dave Peticolas  <dave@krondo.com>

	* configure.in: define a new substitution GNC_PIXMAP_DIR for
	a pixmap directory. check for gal.

	* src/pixmaps/Makefile.am (gncpixmapdir): install in configured
	pixmap directory

	* src/gnc-dir.h.in (GNC_PIXMAP_DIR): define pixmap directory

	* src/Makefile.am (gnc-dir.h): configure pixmap directory
	for gnc-dir.h.in

	* src/gnome/dialog-utils.c (gnc_get_pixmap): use configured
	pixmap directory

	* src/engine/gnc-associate-account.c: fix some uses of glib
	list routines (they always return the new head of the list).

	* src/pixmaps: add gnucash_long.png graphic

	* src/gnome/top-level.c (gnucash_ui_init): show splash screen

	* src/gnome/gnc-splash.{ch}: splash screen functionality

	* src/gnome/dialog-utils.{ch} (gnc_get_pixmap): new function

	* src/gnc-dir.h.in: add header file with directory info

	* src/guile/Makefile.am: use BUILT_SOURCES for *.in sources

2001-03-04  Christian Stimming  <stimming@tuhh.de>

	* src/scm/html-utilities.scm: Added different printing of stock
	accounts. Started a new layout/ordering for sub-totals.

	* src/scm/commodity-utilities.scm (gnc:sum-collector-stocks):
	added such that stock prices are no longer shown but foreign
	currencies are. Rounding precision increased. Added sanity checks
	for arguments of various funtions.

	* src/scm/report-utilities.scm (gnc:account-is-stock?): added
	function

2001-03-04  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-help.c: save & restore window size

	* src/gnome/window-report.c: save & restore window size

	* src/scm/prefs.scm: add vars for report & help win sizes

2001-03-03  Dave Peticolas  <dave@krondo.com>

	* src/engine/sql/README: add info about running without root
	privileges

	* src/engine/sql/design.txt: update design docs
