@@ -1,3 +1,8 @@
+2001-03-05  Dave Peticolas  <dave@krondo.com>
+
+	* src/register/gnome/gnucash-item-edit.{ch}: improve horizontal
+	scrolling behavior.
+
 2001-03-05  Christian Stimming  <stimming@tuhh.de>
 
 	* src/scm/html-utilities.scm: reorganizing of the hierarchical
